--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -95,3 +95,21 @@
  table, th, td {
    border:1px solid black;
  }
+
+
+ /* LE BLOC CENTRAL */
+ .mainBlock{
+  color: black;
+ position: fixed;
+ width: 80vw;
+ height: 100%;
+ background-color: green;
+ font-size: 2.5vw;
+ float: right;
+ left: 24vw;
+ top: 7vw;
+ margin :0px ;
+ padding :0px ;
+ margin-left:6vw;
+ z-index: 2;
+}
