--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
 }
+body{
+  overflow-x: hidden; 
+}
 
  /* HEADER */
  .headerBar{
@@ -9,7 +12,7 @@
     position: absolute;
     width: 82vw;
     height: 8vw;
-    background-color: violet;
+    /*background-color: violet;*/
     font-size: 2.5vw;
     float: right;
     left: 14vw;
@@ -24,6 +27,18 @@
   position: relative;
   right: 35vw;
   top:2vw;
+}
+.buttons{
+  position: relative;
+  top:-5vw;
+  left:30vw;
+
+}
+.buttons img{
+  width: 4vw;
+  height: 4vw;
+  padding: 2vw;
+  margin: auto;
 }
 /* NAVIGATION */
 
@@ -55,7 +70,7 @@
  position: fixed;
  width: 100vw;
  height: 100%;
- background-color: green;
+ background-color: #DCDCDC;
  font-size: 2.5vw;
  float: right;
  left: 14vw;
@@ -66,4 +81,58 @@
  z-index: 2;
  overflow-y: auto;
 max-height: 100vh;
+}
+h1{
+  position: relative;
+  font-size: 2vw;
+  text-align: center;
+  left: -7vw;
+  top: 2vw;
+}
+
+.mainBlock img {
+  position: relative;
+  top:2vw;
+  left: 25vw;
+  width: 5vw;
+  height: 5vw;
+}
+
+.mainBlock table{
+  position: relative;
+  top:2vw;
+  left: 10vw;
+  font-size: 2vw;
+}
+
+table,thead,td{
+  border-bottom: 1px solid #333;
+  border-collapse:collapse;
+  padding: 2vw;
+
+  text-align: center;
+}
+
+.btn_delete{
+  width: 10vw;
+  height: 5vh;
+  background-color: #CD5C5C;
+  color:white;
+  border-radius: 5px;
+  font-size: 1vw;
+}
+
+.btn_update{
+  width: 10vw;
+  height: 5vh;
+  background-color: #6FA8DC;
+  border-radius: 5px;
+  font-size: 1vw;
+  
+}
+.btn_update a {
+  color:white;
+}
+a{
+  text-decoration: none;
 }
