--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,7 +3,10 @@
   padding: 0;
 }
 body{
-  overflow-x: hidden; 
+  overflow-x: hidden;
+  background-size: 100% 100%;
+  font-family: Helvetica, serif;
+
 }
 
  /* HEADER */
@@ -53,6 +56,7 @@ body{
   height: 100vh;
   width: 20%;
   background-color: #6FA8DC;
+  z-index: 2;
 }
 .menu-items{
   padding: 75px;
@@ -60,6 +64,20 @@ body{
   flex-direction: column;
   justify-content: space-between;
   gap: 30px;
+}
+
+.menu img{
+  width: 8vw;
+  height: auto;
+}
+
+.menu img:hover {
+  /* L'image est grossie de 25% */
+  -webkit-transform: scale(1.25); /* Safari et Chrome */
+  -moz-transform: scale(1.25); /* Firefox */
+  -ms-transform: scale(1.25); /* Internet Explorer 9 */
+  -o-transform: scale(1.25); /* Opera */
+  transform: scale(1.25);
 }
 
 
@@ -78,9 +96,6 @@ body{
  margin :0px ;
  padding :0px ;
  margin-left:6vw;
- z-index: 2;
- overflow-y: auto;
-max-height: 100vh;
 }
 h1{
   position: relative;
@@ -88,6 +103,7 @@ h1{
   text-align: center;
   left: -7vw;
   top: 2vw;
+  z-index: 100;
 }
 
 .mainBlock img {
@@ -120,14 +136,17 @@ table,thead,td{
   color:white;
   border-radius: 5px;
   font-size: 1vw;
+  border-color:#CD5C5C ;
 }
 
-.btn_update{
+.btn_update,.btn_valide{
   width: 10vw;
   height: 5vh;
   background-color: #6FA8DC;
   border-radius: 5px;
   font-size: 1vw;
+  border-color:#6FA8DC ;
+
   
 }
 .btn_update a {
@@ -135,4 +154,43 @@ table,thead,td{
 }
 a{
   text-decoration: none;
+}
+
+.btn_valide{
+  position: relative;
+  top: 2vw;
+  left: 10vw;
+  color:white;
+
+}
+label{
+	float: left;
+  position: relative;
+  top: 5vw;
+  left: 10vw;
+  
+}
+
+input,select {
+  width: 10vw;
+  padding: 10px 20px;
+  margin: 8px 0;
+  font-size: 1vw;
+  position: relative;
+  top:5vw;
+  left:-10vw;
+  
+
+  
+}
+
+
+form div{
+  margin: 3vw;
+  display: block;
+
+}
+.scroll{
+  overflow-y: auto;
+  max-height: 100vh;
 }
