--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -42,13 +42,14 @@ body{
 .menu {
   position: fixed;
   top:0vw;
+  left: -2vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
   height: 100vh;
-  width: 20%;
+  width: 25%;
   background-color: #6FA8DC;
   z-index: 2;
 }
@@ -146,8 +147,9 @@ table,thead,td{
   display: unset;
   position: relative;
   right: 19vw;
-  margin: auto;
+   margin: auto;
   padding-left: 7vw;
+
 
 }
 
@@ -200,12 +202,12 @@ label{
 
 .update form div{
   position: relative;
-  top: 2vw;
-  font-size: 2vw;
+  top: -1vw;
+  font-size: 1.5vw;
 }
 .update input{
   position: relative;
-  top:2vw;
+  /* top:2vw; */
 }
 
 
@@ -311,6 +313,13 @@ select{
 }
 
 
-input:focus{
+input:focus,textarea:focus{
   outline: 2px solid black;     /* oranges! yey */
+}
+
+textarea{
+  resize: none;
+  height: 10vh;
+  width: 13vw;
+  
 }
