--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -150,6 +150,14 @@ table,thead,td{
    margin: auto;
   padding-left: 7vw;
 
+}
+
+.listLoans th{
+  display: unset;
+  position: relative;
+  right: 7vw;
+   margin: auto;
+  padding-left: 5.5vw;
 
 }
 
