--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -322,7 +322,12 @@ select{
 
 
 input:focus,textarea:focus{
-  outline: 2px solid black;     /* oranges! yey */
+  outline: 2px solid black;     
+}
+
+input[checkbox]{
+  position: relative;
+  width: 15vw;
 }
 
 textarea{
@@ -331,3 +336,4 @@ textarea{
   width: 13vw;
   
 }
+
