--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12,7 +12,7 @@ body{
     position: absolute;
     width: 78vw;
     height: 8vw;
-    /*background-color: violet;*/
+    background-color: white;
     font-size: 2.5vw;
     float: right;
     left: 20vw;
@@ -336,4 +336,3 @@ textarea{
   width: 13vw;
   
 }
-
